# xource

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.fossil-settings/: binary-glob
common/: CMakeLists.txt  cmd.c  cvar.c  dev.c  globals.c  system.c
common/platform/posix/: debug.c  posix.c
common/platform/sdl/: event.c  sdl.c  video.c
common/std/: stdlib.c  string.c
common/test/: CMakeLists.txt  cvar.c  main.c
engine/: CMakeLists.txt  bsp.c  engine.c
engine/render/: render.c
engine/render/opengl/: CMakeLists.txt  gl_main.c
filesystem/: CMakeLists.txt  fs.c
game/: CMakeLists.txt
game/client/: CMakeLists.txt  console.c  main.c
game/server/: CMakeLists.txt  sv_main.c
init/: CMakeLists.txt  main.c  main.rc
launcher/: CMakeLists.txt  launcher.c
public/: fs.h  platform.h  port.h  test.h  types.h
public/common/: cmd.h  cvar.h  dev.h  host.h  plat.h  system.h
public/engine/: bsp.h
public/std/: stdlib.h  string.h
